# jamly

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/jamly/: __init__.py  auth.py  constants.py  main.py
