[project]
name = "jamly"
version = "0.1.0"
description = ""
authors = [
    {name = "sbrad93",email = "shannon.brady2@marist.edu"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
packages = [{include = "jamly", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
